--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 
 body
 {
-  background-image: url("images/bgimage.jpg");
+  background-image: url(images/image.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
